2008-07-24 Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: fixed hardcoded library detection for oracle. Not
      all OSs have .so.

2008-07-24 Alexander Malysh <amalysh at kannel.org>
    * gwlib/dbpool.c: Fixed deadlock in dbpool_conn_consume if we don't have any
      database connections available anymore and database is temporarely not
      available.

2008-07-24  Stipe Tolj  <stolj at kannel.org>
    * gwlib/cfg.c: add more semantical error statement if we detect an unknown
      group identifier. This shall help the users to find their config typos.
      [Msg-Id: <48877F65.8060605@tolj.org>]

2008-07-19  Stipe Tolj  <stolj at kannel.org>
    * gwlib/mime.c: memory leak fix while duplicating headers.
      Thanks to Paul Bagyenda for providing the patch.
      [Msg-Id: <93C3937B-F5F7-4873-ABF4-391308F9ED09@dsmagic.com>]

2008-07-15  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: memory leak fix for Clickatell and Brunet HTTP API.
      Thanks to Donald Jackson <donaldjster at gmail.com> for the patch.
      [Msg-Id: <290be5f30807140151j5cf784u3b5fdcf3191b890d@mail.gmail.com>]

2008-07-14  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: add 'cliMsgId' support for the Clickatell HTTP API
      to allow defining client side message IDs via our UUID string morphed
      into a MD5 compliant string, added also support for 'alt-charset' config
      directive support in smsc group for setting a different charset encoding
      for the Clickatell HTTP API.

2008-07-04  Stipe Tolj  <stolj at kannel.org>
    * gw/shared.c: ensure we handle OCI_[MINOR|MAJOR]_VERSION only if they 
      are defined in the oci.h header. Pre Oracle 10 versions seem to lack this.
      Thanks to James Bostock <james.bostock at comverse.com> for the patch.
      [Msg-Id: <84E219D8B81E5F4688C4A8992426CD83012A4AFE@fr-par-mail01.comverse.com>] 

2008-07-03  Andreas Fink <andreas at fink.org>