@@ -1,3 +1,7 @@
+2008-07-26 Alexander Malysh <amalysh at kannel.org>
+    * doc/userguide/userguide.xml, gw/smsc/smsc_http.c, gwlib/cfg.def: added new
+      config option 'use-ssl' that allow to use SSL for listen port.
+
 2008-07-24 Alexander Malysh <amalysh at kannel.org>
     * configure.in, configure: fixed hardcoded library detection for oracle. Not
       all OSs have .so.
